java & kotlin overhaul, intersectionSize makes a crucial difference in kotlin